Refactor and update services, tests, and caching logic for dashboard and user operations:
- Replace `AnalyticsService` with `ClickIngestionService` and adjust methods accordingly.
- Introduce granular timeline eviction methods in `UserService` and `URLShortenerService`.
- Enhance dashboard response with device breakdown and fine-grained statistics assembly.
- Refactor `OwnerService` to resolve `linkId` for ownership verification.
- Add HSTS and referrer policy in security configuration.
- Fix typos and enhance HTTP caching in controllers.